Refactored and added get all students functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Academic_ERP
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Academic-ERP?createDatabaseIfNotExists=true
+spring.datasource.url=jdbc:mysql://localhost:3306/AcademicERP?createDatabaseIfNotExists=true
 spring.datasource.username=meenal
 spring.datasource.password=Meenal@1
 
